PYIC-5759: fix code smells